// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading basic rendering renders loading indicator 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FF3D3D"
    size="large"
  />
</View>
`;

exports[`Loading custom styles applies custom style 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "marginTop": 20,
      },
    ]
  }
>
  <ActivityIndicator
    color="#FF3D3D"
    size="large"
  />
</View>
`;

exports[`Loading fullScreen mode renders in fullScreen mode 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FAFAFA",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 16,
        },
        undefined,
      ]
    }
  >
    <ActivityIndicator
      color="#FF3D3D"
      size="large"
    />
  </View>
</View>
`;

exports[`Loading sizes renders large size (default) 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FF3D3D"
    size="large"
  />
</View>
`;

exports[`Loading sizes renders small size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    color="#FF3D3D"
    size="small"
  />
</View>
`;

exports[`Skeleton basic rendering renders with default props 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 4,
        "height": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton borderRadius renders as circle 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 25,
        "height": 50,
        "width": 50,
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton borderRadius renders with custom borderRadius 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 20,
        "height": 20,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton custom styles applies custom style 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 4,
        "height": 20,
        "width": "100%",
      },
      {
        "marginBottom": 8,
      },
    ]
  }
/>
`;

exports[`Skeleton dimensions renders with custom height 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 4,
        "height": 40,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton dimensions renders with custom width 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 4,
        "height": 20,
        "width": 200,
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton dimensions renders with percentage width 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#F5F5F5",
      },
      {
        "borderRadius": 4,
        "height": 20,
        "width": "50%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Skeleton skeleton list renders multiple skeletons for list placeholder 1`] = `
[
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F5",
        },
        {
          "borderRadius": 4,
          "height": 60,
          "width": "100%",
        },
        {
          "marginBottom": 8,
        },
      ]
    }
  />,
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F5",
        },
        {
          "borderRadius": 4,
          "height": 60,
          "width": "100%",
        },
        {
          "marginBottom": 8,
        },
      ]
    }
  />,
  <View
    style={
      [
        {
          "backgroundColor": "#F5F5F5",
        },
        {
          "borderRadius": 4,
          "height": 60,
          "width": "100%",
        },
        {
          "marginBottom": 8,
        },
      ]
    }
  />,
]
`;
